--- a/src/test/resources/data/config.properties
+++ b/src/test/resources/data/config.properties
@@ -7,3 +7,9 @@ homeTitle=Zoho CRM - Home Page
 createLeadTitle=Zoho CRM - Create Lead
 customViewTitle=Zoho CRM - Diplaying custom View Details
 leadDetailsTitle=Zoho CRM - Lead Details
+createAccountTitle=Zoho CRM - 
+
+
+
+
+
